refactor(server): renamed FullServerContext to ServerInstance
Refs: #58